# supervision-hack-sfcr-redpandapy

./: .gitignore  README.md  main.py  pyproject.toml  read-pdf-content.py  read_pdf_content.py  scrape.py  scrapepdfs.txt  sfcr_sites.json  supabase-config.py
