[tool.poetry]
name = "supervision-hack-sfcr-redpandapy"
version = "0.1.0"
description = "Project for Supervision_hack 3"
authors = ["jglowacz, akolba"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
supabase = "^2.0.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
