[tool.poetry]
name = "supervision-hack-sfcr-redpandapy"
version = "0.1.0"
description = "Project for Supervision_hack 3"
authors = ["jglowacz, akolba"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
bs4 = "^0.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
